--- a/i3/polybar/config.ini
+++ b/i3/polybar/config.ini
@@ -48,10 +48,10 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = monospace;2
+font-0 = "Iosevka Nerd Font:size=15;4"
 
 modules-left = xworkspaces
-modules-right = backlight pulseaudio xkeyboard memory cpu wlan date battery
+modules-right = backlight pulseaudio memory cpu wlan date battery
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -105,35 +105,58 @@ format = <ramp> <label>
 label = %percentage%%
 
 ; Only applies if <ramp> is used
-ramp-0 = 🌕
-ramp-1 = 🌔
-ramp-2 = 🌓
-ramp-3 = 🌒
-ramp-4 = 🌑
-;ramp-0 = 
-;ramp-1 = 
-;ramp-2 = 
-;ramp-3 = 
-;ramp-4 = 
-;ramp-5 = 
-;ramp-6 = 
-;ramp-7 = 
-;ramp-8 = 
-;ramp-9 = 
-;ramp-font = 2
+;ramp-0 = 🌕
+;ramp-1 = 🌔
+;ramp-2 = 🌓
+;ramp-3 = 🌒
+;ramp-4 = 🌑
+ramp-0 = 
+ramp-1 = 
+ramp-2 = 
+ramp-3 = 
+ramp-4 = 
+ramp-5 = 
+ramp-6 = 
+ramp-7 = 
+ramp-8 = 
+ramp-9 = 
+ramp-font = 2
 ramp-foreground = ${colors.foreground}
 
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = "VOL "
 format-volume-prefix-foreground = ${colors.primary}
-format-volume = <label-volume>
+format-volume = <ramp-volume> <bar-volume> <label-volume>
 
 label-volume = %percentage%%
 
-label-muted = muted
+format-muted = <label-muted>
+format-muted-prefix = 
+format-muted-prefix-font = 1
+label-muted = " Mute"
 label-muted-foreground = ${colors.disabled}
+
+bar-volume-width = 10
+bar-volume-gradient = false
+
+bar-volume-indicator = 雷
+bar-volume-indicator-font = 1
+bar-volume-fill = 絛
+bar-volume-empty = 絛
+
+ramp-volume-0 = 
+ramp-volume-1 = 
+ramp-volume-2 = 
+ramp-volume-3 = 
+ramp-volume-4 = 
+ramp-volume-5 = 
+ramp-volume-6 = 
+ramp-volume-7 = 
+ramp-volume-8 = 
+ramp-volume-9 = 
+ramp-volume-font = 2
+ramp-volume-foreground = ${colors.foreground}
 
 click-right = pavucontrol
 
@@ -164,18 +187,6 @@ animation-charging-framerate = 750
 label-charging = Charging %percentage%
 label-discharging = Discharging %percentage%
 label-full = Fully Charged
-
-[module/xkeyboard]
-type = internal/xkeyboard
-blacklist-0 = num lock
-
-label-layout = %layout%
-label-layout-foreground = ${colors.primary}
-
-label-indicator-padding = 2
-label-indicator-margin = 1
-label-indicator-foreground = ${colors.background}
-label-indicator-background = ${colors.secondary}
 
 [module/memory]
 type = internal/memory
