--- a/i3/i3.toml
+++ b/i3/i3.toml
@@ -6,6 +6,7 @@ posthooks = ["i3-msg reload"]
 i3 =  { source = "i3/config", target = ".config/i3" }
 polybar =  { source = "i3/polybar", target = ".config/polybar" }
 onagre =  { source = "i3/onagre", target = ".config/onagre" }
+picom =  { source = "i3/picom", target = ".config/picom" }
 wallpapers = {source = "wallpapers/i3", target = ".config/wallpapers"}
 dunst = {source = "i3/dunst", target = ".config/dunst"}
 betterlockscreen = { source = "i3/betterlockscreen/betterlockscreenrc", target= ".config/betterlockscreenrc" }
