--- a/i3/polybar/config.ini
+++ b/i3/polybar/config.ini
@@ -17,7 +17,7 @@
 ;==========================================================
 
 [colors]
-background = #222934
+background = #00222934
 background-alt = #373B41
 foreground = #67ace9
 primary = #e06c75
@@ -58,11 +58,11 @@ cursor-scroll = ns-resize
 
 enable-ipc = true
 
-; tray-position = right
+ tray-position = right
 
 ; wm-restack = generic
 ; wm-restack = bspwm
-; wm-restack = i3
+ wm-restack = i3
 
 ; override-redirect = true
 
@@ -225,6 +225,13 @@ label = %date%
 label-foreground = ${colors.primary}
 
 [settings]
+
+compositing-background = source
+compositing-foreground = over
+compositing-overline = over
+compositing-underline = over
+compositing-border = over
+
 screenchange-reload = true
 pseudo-transparency = true
 
