feat: add sway config

--- a/sway/config/config
+++ b/sway/config/config
@@ -1,5 +1,6 @@
 # Start
 
+exec systemctl --user import-environment DISPLAY WAYLAND_DISPLAY SWAYSOCK
 exec dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK
 exec nm-applet --indicator
 exec {{notification}}
