--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,3 +1,4 @@
+[general]
 import = ["/home/hugo/.config/alacritty/colors.toml", "/home/hugo/.config/alacritty/fonts.toml"]
 live_config_reload = true
 
