--- a/sway/mako/config
+++ b/sway/mako/config
@@ -1,15 +1,15 @@
-font=Noto Sans 10
-background-color=#434c5e
-text-color=#eceff4
+font=Fira Code 10
+background-color=#2D353B
+text-color=#D3C6AA
 progress-color=over #88c0d0
 margin=20,20,10
 padding=10
-border-size=2
+border-size=1
 border-radius=2
-border-color=#5e81ac
+border-color=#83C092
 default-timeout=4000
 max-visible=4
-format=<span foreground="#8fbcbb"></span><span foreground="#88c0d0"></span><span><b>   %a   </b></span><span foreground="#88c0d0"></span><span foreground="#8fbcbb"></span>\n\n<b>%s</b>\n%b
+format=<span foreground="#E67E80"></span><span foreground="#DBBC7F"></span><span><b>   %a   </b></span><span foreground="#DBBC7F"></span><span foreground="#E67E80"></span>\n\n<b>%s</b>\n%b
 layer=overlay
 group-by=summary
 icon-path=/usr/share/icons/Test:/usr/share/icons/Adwaita
