--- a/sway/waybar/config
+++ b/sway/waybar/config
@@ -1,29 +1,29 @@
 {
   // "layer": "top", // Waybar at top layer
   // "position": "bottom", // Waybar position (top|bottom|left|right)
-  "height": 30, // Waybar height (to be removed for auto height)
+  "height": 39, // Waybar height (to be removed for auto height)
   // "width": 1280, // Waybar width
   "spacing": 8, // Gaps between modules (4px)
   // Choose the order of the modules
   "modules-left": ["sway/workspaces", "sway/mode", "sway/scratchpad"],
   "modules-center": ["sway/window"],
-  "modules-right": ["mpd", "idle_inhibitor", "pulseaudio", "network", "bluetooth", "backlight", "battery", "battery#bat2", "clock", "tray"],
+  "modules-right": ["custom/weather", "idle_inhibitor", "pulseaudio", "network", "bluetooth", "battery", "memory", "clock", "tray"],
   // Modules configuration
-  // "sway/workspaces": {
-  //     "disable-scroll": true,
-  //     "all-outputs": true,
-  //     "format": "{name}: {icon}",
-  //     "format-icons": {
-  //         "1": "",
-  //         "2": "",
-  //         "3": "",
-  //         "4": "",
-  //         "5": "",
-  //         "urgent": "",
-  //         "focused": "",
-  //         "default": ""
-  //     }
-  // },
+   "sway/workspaces": {
+       "disable-scroll": true,
+       "all-outputs": true,
+       "format": "{name}: {icon}",
+       "format-icons": {
+           "1": "",
+           "2": "",
+           "3": "",
+           "4": "",
+           "urgent": "",
+           "focused": "",
+           "default": ""
+       },
+       "window-rewrite": {}
+   },
   "sway/mode": {
     "format": "<span style=\"italic\">{}</span>"
   },
@@ -73,7 +73,7 @@
     "spacing": 10
   },
   "clock": {
-    // "timezone": "America/New_York",
+    "timezone": "Europe/Paris",
     "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
     "format-alt": "{:%Y-%m-%d}"
   },
@@ -97,7 +97,7 @@
     "format-icons": ["<span color=\"#E67E80\"></span>", "<span color=\"#E69875\"></span>", "<span color=\"#DBBC7F\"></span>", "<span color=\"#83C092\"></span>", "<span color=\"#83C092\"></span>"]
   },
   "battery#bat2": {
-    "bat": "BAT2"
+    "bat": "BAT0"
   },
   "network": {
     // "interface": "wlp2*", // (Optional) To force the use of this interface
@@ -142,12 +142,28 @@
       "rewrite": {
          "(.*) - Mozilla Firefox": "🌎 $1",
          "(.*) - vim": " $1",
-         "hugo@hugosarch:": " [$1]"
+         "hugo@tilleulsbtw:": " [$1]"
       }
   },
     "custom/arrow1": {
         "format": "",
         "tooltip": false
+    },
+    "memory": {
+        "interval": 30,
+        "format": "{used:0.1f}G/{total:0.1f}G "
+    },
+    "cpu": {
+        "interval": 10,
+        "format": "{}% ",
+        "max-length": 10
+    },
+    "custom/weather": {
+        "exec": "${HOME}/.config/waybar/scripts/get_weather.sh Lille+France",
+        "return-type": "json",
+        "format": "{}",
+        "tooltip": true,
+        "interval": 3600
     }
 }
 
